# aircall

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
app/adapters/incoming/: alerting.py  page_web_console.py  timer_service.py
app/adapters/outcoming/: notification.py  persistency.py  timer_service.py
app/adapters/outcoming/escalation_policy/: adapter.py
app/application/use_cases/: process_ack_later_ack_timeout.py  process_alert.py  process_healthy_later_ack_timeout.py
app/domain/entities/: alert.py  events.py
app/domain/services/: alert_service.py  console_service.py  timer_event_service.py
app/domain/value_objects/: policy.py
app/ports/incoming/: alerts.py  page_web_console.py  timer_service.py
app/ports/outcoming/: escalation_policy.py  notification.py  persistency.py  timer_service.py
app/ports/page_service/: notification_service.py
doc/adr/: 0001-record-architecture-decisions.md  0002-use-of-domain-model-in-hexagonal-architecture.md  0003-why-to-use-event-sourcing-eda-cqrs.md
tests/: conftest.py  test_ack_handler.py  test_alert_handler.py  test_healty_handler.py  test_notification.py  test_timeout_handler.py
