[tool.poetry]
name = "aircall"
version = "0.1.0"
description = "Aircall Technical Test - Aircall Pager"
authors = ["K-appears <krs@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]


[tool.poetry.dependencies]
python = "^3.12"
Flask-API = "^3.1"
gunicorn = "^22.0.0"
coverage = "^7.4.4"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = ["integration: marks tests as integration (deselect with '-m \"not integration\"')"]


[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | \.*migrations.*
)/
'''

[tool.isort]
profile = "black"
src_paths = ["app"]
skip = ["app/migrations/*.py"]

[tool.mypy]
check_untyped_defs = true
strict = true
exclude = ["^.*test_.*\\.py$", "^.*conftest\\.py$"]

[tool.django-stubs]
django_settings_module = "app.settings"


[virtualenvs]
in-project = true
